# HW_end

./: README.md  main.py  pyproject.toml
logs/: mylog.txt
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  reading_files.py  utils.py  widget.py  word_find.py
tests/: test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_reading_files.py  test_utils.py  test_widget.py  test_word_find.py
