[tool.poetry]
name = "hw-end"
version = "0.1.0"
description = ""
authors = ["Ivan Glushenkov <glushman966@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
pandas = "^2.3.3"
openpyxl = "^3.1.5"
pytest = "^9.0.2"
requests = "^2.32.5"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-cov (>=7.0.0,<8.0.0)"
]
