[tool.poetry]
name = "hw-end"
version = "0.1.0"
description = ""
authors = ["Ivan Glushenkov <glushman966@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
pandas = "^2.3.3"
openpyxl = "^3.1.5"
pytest = "^9.0.2"
requests = "^2.32.5"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-cov (>=7.0.0,<8.0.0)"
]
lint = [
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.black]
line_length = 119
exclude = ".git"

[tool.isort]
line_length = 119
force_single_line = true

[tool.mypy]
disallow_untyped_defs=true
warn_return_any=true
exclude = "venv"